--- a/product_page.html
+++ b/product_page.html
@@ -12,6 +12,8 @@
         <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
         <link rel="manifest" href="./assets/favicon/site.webmanifest">
+        <!-- RECAPCHA -->
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
         <!-- css -->
         <link rel="stylesheet" href="./assets/css/style.css">
         <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
@@ -37,7 +39,6 @@
                     <li class="nav__item"><a href="#" class="nav__link">đồng hồ nữ</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">đồng hồ đôi</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">phụ kiện</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">chính sách</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">tin tức</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">liên hệ</a></li>
                 </ul>
