create news page

--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
       }
       .login-reg-panel {
         position: relative;
-        top: 50%;
+        top: 40%;
         transform: translateY(-50%);
         text-align: center;
         width: 70%;
@@ -160,9 +160,6 @@
         cursor: pointer;
       }
 
-      .register-show {
-      }
-
       .credit {
         position: absolute;
         bottom: 10px;
@@ -223,6 +220,7 @@
                 <input type="text" placeholder="Email" />
                 <input type="password" placeholder="Mật khẩu" />
                 <input type="submit" value="Đăng nhập" />
+                <a href="./forgot-password-form.html">Quên mật khẩu</a> <br>
                 <a href="./index.html">Trang chủ</a>
 
             </form>
