--- a/category.html
+++ b/category.html
@@ -313,7 +313,7 @@
 
 
                 <!-- Pagination -->
-                <div class="pagination__container pagination__container2">
+                <!-- <div class="pagination__container pagination__container2">
                     <ul class="page">
                         <li class="page__btn"><a href=""><i class="ri-arrow-left-s-line"></i></a></li>
                         <li class="page__numbers"><a href="#">1</a></li>
@@ -326,7 +326,7 @@
                         <li class="page__numbers"><a href="#">10</a></li>
                         <li class="page__btn"><a><i class="ri-arrow-right-s-line"></i></a></li>
                     </ul>
-                </div>
+                </div> -->
             </div>
 
 
