--- a/product_page.html
+++ b/product_page.html
@@ -136,7 +136,8 @@
 
                         <div class="product__span">
                             <span class=product__ma-sp> Mã: mã sản phẩm</span> <br>
-                            <span class="product__category"> Danh mục: danh mục</span>
+                            <span class="product__category"> Danh mục: danh mục</span> <br>
+                            <span class="product__category"> <i class="ri-eye-line" style="vertical-align: middle;"></i> Lượt xem: 0</span>
                         </div>
 
                     </div>
