--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link">giới thiệu</a></li>
+                    <li class="nav__item"><a href="./about.html" class="nav__link">giới thiệu</a></li>
 
                     <li class="nav__item"><a href="/category.html" class="nav__link">đồng hồ nam</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">đồng hồ nữ</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">đồng hồ đôi</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">phụ kiện</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">tin tức</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">liên hệ</a></li>
+                    <li class="nav__item"><a href="./news.html" class="nav__link">tin tức</a></li>
+                    <li class="nav__item"><a href="./contact.html" class="nav__link">liên hệ</a></li>
                 </ul>
             </div>
 
@@ -62,7 +62,7 @@
                             </form>
                         </div>
                     </li>
-                    <li class="social__item"><a href="./cart.php" class="social__icon"><i class="ri-shopping-bag-line"
+                    <li class="social__item"><a href="./cart.html" class="social__icon"><i class="ri-shopping-bag-line"
                                 title="Giỏ hàng"></i></a></li>
 
                     <!-- Nếu đăng nhập thành công hiện ảnh ng dùng  -->
@@ -74,7 +74,7 @@
 
                     <!-- Nếu đăng nhập thành công ko hiện thẻ đăng nhập -->
 
-                    <li class="social__item"><a style="text-transform: none" href="./src/admin/auth/login_form.php"
+                    <li class="social__item"><a style="text-transform: none" href="./login.html"
                             class="social__icon " id="admin" title="Tài khoản"><i class="ri-user-line"></i>
                             Đăng nhập
                         </a></li>
@@ -85,8 +85,8 @@
                             class="social__icon"><i class="ri-logout-box-line" title="Đăng xuất"></i>Đăng xuất</a></li> -->
 
                     <!-- Chưa đăng nhập ko hiện thẻ đăng xuất -->
-                    <li class="social__item"><a style="text-transform: none" href="./src/admin/auth/register_form.php"
-                            class="social__icon"><i class="ri-user-add-line" title="Đăng ký"></i>Đăng ký</a></li>
+                    <!-- <li class="social__item"><a style="text-transform: none" href="./src/admin/auth/register_form.php"
+                            class="social__icon"><i class="ri-user-add-line" title="Đăng ký"></i>Đăng ký</a></li> -->
 
                     <li class="social__item" id="dash"><a href="./src/admin/dashboard/dash.php" title="Quản trị"
                             class="social__icon"><i class="ri-settings-2-line"></i></a></li>
