--- a/product_page.html
+++ b/product_page.html
@@ -16,6 +16,8 @@
         <script src="https://www.google.com/recaptcha/api.js" async defer></script>
         <!-- css -->
         <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/cart.css">
+
         <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css">
         <!-- aos js -->
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
