--- a/payment.html
+++ b/payment.html
@@ -142,32 +142,32 @@
                         <div>
                             <table style="text-align:left; width: 100%; color: black;">
                                 <thead>
-                                    <th width="60%">Sản phẩm</th>
-                                    <th width="30%">Tổng</th>
+                                    <th width="60%" style="font-size: 18px;">Sản phẩm</th>
+                                    <th width="30%" style="font-size: 18px;">Tổng</th>
 
                                 </thead>
 
                                 <tr>
 
-                                    <td>Lorem ipsum dolor, s</td>
-                                    <td>99999999999 đ</td>
+                                    <td style="border-top: 1px solid #ddd; padding: .5rem 0;">Lorem ipsum dolor, s</td>
+                                    <td style="border-top: 1px solid #ddd; padding: .5rem 0;">99999999999 đ</td>
                                 </tr>
 
                                 <tr>
-                                    <td>Ước tính</td>
-                                    <td>99999999999 đ</td>
+                                    <td style="border-top: 1px solid #ddd; padding: .5rem 0;">Ước tính</td>
+                                    <td style="border-top: 1px solid #ddd; padding: .5rem 0;">99999999999 đ</td>
                                 </tr>
                                 <tr>
-                                    <td>Thuế (0%)</td>
-                                    <td>0 đ</td>
+                                    <td style="border-top: 1px solid #ddd; padding: .5rem 0;">Thuế (0%)</td>
+                                    <td style="border-top: 1px solid #ddd; padding: .5rem 0;">0 đ</td>
                                 </tr>
                                 <tr>
-                                    <td>Giao hàng</td>
-                                    <td>Miễn phí</td>
+                                    <td style="border-top: 1px solid #ddd; padding: .5rem 0;">Giao hàng</td>
+                                    <td style="border-top: 1px solid #ddd; padding: .5rem 0;">Miễn phí</td>
                                 </tr>
                                 <tr>
-                                    <td>Tổng cộng</td>
-                                    <td>99999999999 đ</td>
+                                    <td style="border-top: 1px solid #ddd; padding: .5rem 0;">Tổng cộng</td>
+                                    <td style="border-top: 1px solid #ddd; padding: .5rem 0;">99999999999 đ</td>
                                 </tr>
 
                             </table>
