--- a/cart.html
+++ b/cart.html
@@ -158,7 +158,7 @@
                     </div>
                     <!-- <a  href="./src/admin/auth/login_form.php" class="checkout">Đăng nhập để thanh toán</a> -->
     
-                        <a  href="./checkout.php" class="checkout">Thanh toán</a>
+                        <a  href="./payment.html" class="checkout">Thanh toán</a>
                     <a  href="./index.php" class="back-checkout checkout">Quay lại</a>
                         
                 </div>
