--- a/payment.html
+++ b/payment.html
@@ -147,25 +147,25 @@
 
                                 </thead>
 
-                                <tr>
+                                <tr style="font-size: 14px;">
 
                                     <td style="border-top: 1px solid #ddd; padding: .5rem 0;">Lorem ipsum dolor, s</td>
                                     <td style="border-top: 1px solid #ddd; padding: .5rem 0;">99999999999 đ</td>
                                 </tr>
 
-                                <tr>
+                                <tr style="font-size: 14px;">
                                     <td style="border-top: 1px solid #ddd; padding: .5rem 0;">Ước tính</td>
                                     <td style="border-top: 1px solid #ddd; padding: .5rem 0;">99999999999 đ</td>
                                 </tr>
-                                <tr>
+                                <tr style="font-size: 14px;">
                                     <td style="border-top: 1px solid #ddd; padding: .5rem 0;">Thuế (0%)</td>
                                     <td style="border-top: 1px solid #ddd; padding: .5rem 0;">0 đ</td>
                                 </tr>
-                                <tr>
+                                <tr style="font-size: 14px;">
                                     <td style="border-top: 1px solid #ddd; padding: .5rem 0;">Giao hàng</td>
-                                    <td style="border-top: 1px solid #ddd; padding: .5rem 0;">Miễn phí</td>
+                                    <td style="border-top: 1px solid #ddd; padding: .5rem 0; color: #666;">Miễn phí</td>
                                 </tr>
-                                <tr>
+                                <tr style="font-size: 14px;">
                                     <td style="border-top: 1px solid #ddd; padding: .5rem 0;">Tổng cộng</td>
                                     <td style="border-top: 1px solid #ddd; padding: .5rem 0;">99999999999 đ</td>
                                 </tr>
