--- a/payment.html
+++ b/payment.html
@@ -103,7 +103,7 @@
         <div class="description__container contact__container">
             <div class="contact__form-container">
 
-                <div class="contact__content" style="justify-content: center; padding-top: 50px;">
+                <div class="contact__content payment-content" style="justify-content: center; padding-top: 50px;">
                     <div class="contact__form" style="width:40%;border-top: 2px solid #ddd;">
                         <div class="description__container-title contact__container-title">
                             <small class="sidebar-title" style="margin-bottom: 0;font-size: 20px;">THÔNG TIN THANH
@@ -131,12 +131,12 @@
                             <label for="" style="color: black;">Ghi chú đơn hàng *</label>
                             <textarea name="" id="" cols="15" rows="7" placeholder="Tin nhắn ..."
                                 style="padding-top:.5rem; padding-bottom: .5rem"></textarea>
-                            <button type="submit">Đặt hàng</button>
+                            <button class="payment-btn" type="submit">Đặt hàng</button>
                         </form>
                     </div>
 
-                    <div class="contact__address"
-                        style="width:40%; flex: none; border: 2px solid #44596F; padding: 0.5rem;">
+                    <div class="contact__address payment-details"
+                        style="width:40%; flex: none; border: 2px solid #44596F; padding: 0.5rem; padding-bottom: 1rem;">
                         <small class="sidebar-title" style="margin-bottom: 0;font-size: 20px;">ĐƠN HÀNG CỦA BẠN</small>
                         <div class="is-divider small " style="margin: .25rem 0; max-width: 100%;"></div>
                         <div>
