order received page

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
                     <!-- Nếu đăng nhập thành công ko hiện thẻ đăng nhập -->
 
-                    <li class="social__item"><a style="text-transform: none" href="./login.html"
-                            class="social__icon " id="admin" title="Tài khoản"><i class="ri-user-line"></i>
+                    <li class="social__item"><a style="text-transform: none" href="./login.html" class="social__icon "
+                            id="admin" title="Tài khoản"><i class="ri-user-line"></i>
                             Đăng nhập
                         </a></li>
 
