--- a/news.html
+++ b/news.html
@@ -118,7 +118,7 @@
                             <p class="item__text-date_month">Th11</p>
                         </div>
                         <div class="item__text-title">
-                            <a href="">Lorem ipsum dolor sit amet consectetur adipisi</a>
+                            <a href="./news-item.html">Lorem ipsum dolor sit amet consectetur adipisi</a>
                         </div>
                         <div class="is-divider small is-divider-news"></div>
                         <div class="item__text-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, quis tempore delectus error impedit et, sapiente, corrupti eaque pariatur consequuntur voluptas adipisci recusandae vitae saepe? Debitis, eaque nisi. Commodi, ducimus.</div>
@@ -135,7 +135,7 @@
                             <p class="item__text-date_month">Th11</p>
                         </div>
                         <div class="item__text-title">
-                            <a href="">Lorem ipsum dolor sit amet consectetur adipisi</a>
+                            <a href="./news-item.html">Lorem ipsum dolor sit amet consectetur adipisi</a>
                         </div>
                         <div class="is-divider small is-divider-news"></div>
                         <div class="item__text-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, quis tempore delectus error impedit et, sapiente, corrupti eaque pariatur consequuntur voluptas adipisci recusandae vitae saepe? Debitis, eaque nisi. Commodi, ducimus.</div>
@@ -229,7 +229,7 @@
                                 <p class="item__text-date_day">07</p>
                                 <p class="item__text-date_month">Th11</p>
                             </div>
-                            <a href="#" class="new-lasted-title">
+                            <a href="./news-item.html" class="new-lasted-title">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt?
                             </a>
                         </div>
