--- a/cart.html
+++ b/cart.html
@@ -5,9 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- FAVICON -->
-        <link rel="apple-touch-icon" sizes="180x180" href="./asset/favicon/apple-touch-icon.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+        <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico">
         <link rel="manifest" href="./assets/favicon/site.webmanifest">
         <!-- RECAPCHA -->
         <script src="https://www.google.com/recaptcha/api.js" async defer></script>
