--- a/index.html
+++ b/index.html
@@ -130,7 +130,12 @@
                         </a>
                     </div>
                     <div class="product__price ">
-                        Giá tiền &#8363
+                        <del>
+                            <span class="product__price-sale">
+                                1.000.000  &#8363
+                            </span>
+                        </del>
+                        900.000 &#8363
                     </div>
 
                     <div class="sold_out">Hết hàng</div>
