--- a/payment.html
+++ b/payment.html
@@ -103,8 +103,25 @@
 
         <div class="description__container contact__container">
             <div class="contact__form-container">
+                <div class="apply__discount">
+                    <div class="apply__discount-text">
+                        <p><i class="ri-price-tag-3-fill"></i>Có mã ưu đãi?</p> 
+                        <p class="form-discount-toggle"> Ấn vào đây để nhập mã của bạn</p>
+                    </div>
+                    <div class="form-apply__discount">
+                        <form action="">
+                            <div class="input-discount">
+                                <input type="text" name="" id="" placeholder="Mã ưu đãi">
+                            </div>
+                            <div class="submit-discount">
+                                <button type="submit">ÁP DỤNG MÃ ƯU ĐÃI</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
 
-                <div class="contact__content payment-content" style="justify-content: center; padding-top: 50px;">
+
+                <div class="contact__content payment-content" style="justify-content: center; padding-top: 30px;">
                     <div class="contact__form" style="width:40%;border-top: 2px solid #ddd;">
                         <div class="description__container-title contact__container-title">
                             <small class="sidebar-title" style="margin-bottom: 0;font-size: 20px;">THÔNG TIN THANH
