--- a/category.html
+++ b/category.html
@@ -251,6 +251,9 @@
                     <div class="product__price ">
                         Giá tiền &#8363
                     </div>
+                    <div class="product__view">
+                        <i class="ri-eye-fill"></i> <p>999 lượt xem</p>    
+                    </div>
                     <!-- if sold out -->
                     <div class="sold_out">Hết hàng</div>
                 </div>
