--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                         </del>
                         900.000 &#8363
                     </div>
+                    <div class="product__view">
+                        <i class="ri-eye-fill"></i> <p>999 lượt xem</p>    
+                    </div>
 
                     <div class="sold_out">Hết hàng</div>
 
@@ -159,6 +162,9 @@
                     <div class="product__price ">
 
                     </div>
+                    <div class="product__view">
+                        <i class="ri-eye-fill"></i> <p>999 lượt xem</p>    
+                    </div>
 
                     <div class="sold_out">Hết hàng</div>
 
@@ -179,6 +185,9 @@
                     <div class="product__price ">
                         Giá tiền &#8363
                     </div>
+                    <div class="product__view">
+                        <i class="ri-eye-fill"></i> <p>999 lượt xem</p>    
+                    </div>
                 </div>
                 <div class="product__card">
                     <div class="product__img">
@@ -195,6 +204,9 @@
                     <div class="product__price ">
                         Giá tiền &#8363
                     </div>
+                    <div class="product__view">
+                        <i class="ri-eye-fill"></i> <p>999 lượt xem</p>    
+                    </div>
 
 
 
@@ -213,6 +225,9 @@
                     </div>
                     <div class="product__price ">
                         Giá tiền &#8363
+                    </div>
+                    <div class="product__view">
+                        <i class="ri-eye-fill"></i> <p>999 lượt xem</p>    
                     </div>
 
 
