--- a/about.html
+++ b/about.html
@@ -244,6 +244,16 @@
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
+        function showPassw() {
+            var x = document.getElementById("password");
+            if (x.type === "password") {
+                x.type = "text";
+            } else {
+                x.type = "password";
+            }
+        }
+    </script>
+    <script>
         var swiper = new Swiper(".mySwiper", {
             autoplay: {
                 delay: 2500,
