--- a/product_page.html
+++ b/product_page.html
@@ -179,8 +179,7 @@
                                 <input type="submit" class="comment__form-submit--btn" value="Gửi đi">
                             </div>
                         </form>
-                        <!-- Chưa đăng nhập hiện thông báo đăng nhập -->
-                        <p class="profile__error">Bạn cần đăng nhập mới có thể bình luận.</p>
+                        <!-- <p class="profile__error">Bạn cần đăng nhập mới có thể bình luận.</p> -->
                     </div>
 
                     <div class="comment__users">
