--- a/profile.html
+++ b/profile.html
@@ -191,7 +191,7 @@
                             <input type="checkbox" class="me-1" onclick="showPassw()" />Hiển
                             thị mật khẩu
                         </div>
-                        <div class="profile__error">error</div>
+                        <div class="profile__error form__error">error</div>
                         <div class="profile__group profile__btn">
                             <button type="submit" class="profile__update-btn"
                                 onclick="return confirm('Cập nhật tài khoản?')">
