--- a/product_page.html
+++ b/product_page.html
@@ -117,7 +117,14 @@
                         </nav>
                         <h2 class="product__name">Tên sản phẩm</h2>
                         <div class="is-divider"></div>
-                        <h2 class="product__price product__price-page">Giá tiền &#8363</h2>
+                        <h2 class="product__price product__price-page">
+                            <del>
+                                <span class="product-page__price-sale">
+                                    1.000.000  &#8363
+                                </span>
+                            </del>
+                            1.000 &#8363
+                        </h2>
                         <p class="product__description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Praesentium quae ipsum, incidunt blanditiis optio officiis ducimus repellendus eum delectus,
                             cumque ipsa consequuntur beatae tenetur eveniet! Cupiditate praesentium vero eaque
