--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <header class="header " id="header">
         <nav class="nav container">
-            <a href="./index.html" class="nav__logo">SHOP<i class="ri-time-line"></i></a>
+            <a href="./index.html" class="nav__logo"><img class="nav__logo-img" src="./assets/img/logo_hkl.png" alt="logo"></a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -424,7 +424,7 @@
                     <div class="news__content-img">
                         <img src="./assets/img/slide1.jpg" class="news__img" alt="">
                     </div>
-                    <a href="" class="news__title">Những mẫu đồng hồ dành cho công sở ...</a>
+                    <a href="./news-item.html" class="news__title">Những mẫu đồng hồ dành cho công sở ...</a>
                     <span class="news__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                         Iusto eius ...</span>
                 </div>
@@ -432,7 +432,7 @@
                     <div class="news__content-img">
                         <img src="./assets/img/slide2.jpg" class="news__img" alt="">
                     </div>
-                    <a href="" class="news__title">Bộ sưu tập hoàng gia ...</a>
+                    <a href="./news-item.html" class="news__title">Bộ sưu tập hoàng gia ...</a>
                     <span class="news__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                         Iusto eius ...</span>
                 </div>
@@ -440,7 +440,7 @@
                     <div class="news__content-img">
                         <img src="./assets/img/slide3.jpg" class="news__img" alt="">
                     </div>
-                    <a href="" class="news__title">Thiết kế hướng dến sự thanh lịch ...</a>
+                    <a href="./news-item.html" class="news__title">Thiết kế hướng dến sự thanh lịch ...</a>
                     <span class="news__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                         Iusto eius ...</span>
                 </div>
