--- a/product_page.html
+++ b/product_page.html
@@ -33,8 +33,7 @@
 <body>
     <header class="header header__product" id="header">
         <nav class="nav container">
-            <a href="./index.html" class="nav__logo">XSHOP<i class="ri-time-line"></i></a>
-
+            <a href="./index.html" class="nav__logo"><img class="nav__logo-img" src="./assets/img/logo_hkl.png" alt="logo"></a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#" class="nav__link">giới thiệu</a></li>
