--- a/profile.html
+++ b/profile.html
@@ -31,7 +31,7 @@
 <body>
     <header class="header header__product" id="header">
         <nav class="nav container">
-            <a href="./index.html" class="nav__logo">XSHOP<i class="ri-time-line"></i></a>
+            <a href="./index.html" class="nav__logo"><img class="nav__logo-img" src="./assets/img/logo_hkl.png" alt="logo"></a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
