--- a/forgot-password-form.html
+++ b/forgot-password-form.html
@@ -86,21 +86,11 @@
         text-align: left;
         color: #000;
       }
-      .register-info-box {
-        width: 30%;
-        padding: 0 50px;
-        top: 20%;
-        right: 0;
-        position: absolute;
-        text-align: left;
-        color: #000;
-      }
       .right-log {
         right: 50px !important;
       }
 
-      .login-show,
-      .register-show {
+      .login-show {
         z-index: 1;
         display: none;
         opacity: 0;
@@ -130,71 +120,24 @@
         color: #f9f9f9;
         border: none;
         padding: 10px;
-        text-transform: uppercase;
         border-radius: 2px;
         float: right;
         cursor: pointer;
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
       }
       .login-show a {
         display: inline-block;
         padding: 10px 0;
       }
 
-      .register-show input[type="text"],
-      .register-show input[type="email"],
-      .register-show input[type="number"],
-      .register-show input[type="password"],
-      .register-show select {
-        width: 100%;
-        display: block;
-        margin: 20px 0;
-        padding: 15px;
-        border: 1px solid #b5b5b5;
-        outline: none;
-      }
-      .register-show input[type="submit"] {
-        max-width: 150px;
-        width: 100%;
-        background: #444444;
-        color: #f9f9f9;
-        border: none;
-        padding: 10px;
-        text-transform: uppercase;
-        border-radius: 2px;
-        float: right;
-        cursor: pointer;
-      }
-
-      .credit {
-        position: absolute;
-        bottom: 10px;
-        left: 10px;
-        color: #3b3b25;
-        margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif;
-        text-transform: uppercase;
-        font-size: 12px;
-        font-weight: bold;
-        letter-spacing: 1px;
-        z-index: 99;
-      }
       a {
         text-decoration: none;
         color: #2c7715;
       }
 
-      .register-item {
-        display: inline-flex;
-        column-gap: 1rem;
-      }
+      
 
-      .mt-4 {
-        padding-top: 5rem;
-        width: 100%;
-        height: 100px;
-        background: none;
-      }
     </style>
   </head>
   <body>
@@ -206,9 +149,10 @@
                 <h2>QUÊN MẬT KHẨU</h2>
                 <label for="">Nhập email để lấy lại mật khẩu</label>
                 <input type="text" placeholder="Email" />
-                <p>Vui lòng kiểm tra email!</p>
-                <p>Email không tồn tại</p>
+                <!-- <p>Vui lòng kiểm tra email!</p>
+                <p>Email không tồn tại</p> -->
                 <input type="submit" value="GỬI" />
+                <a href="./login.html">Đăng nhập</a> <br>
                 <a href="./index.html">Trang chủ</a>
 
             </form>
