--- a/forgot-password-form.html
+++ b/forgot-password-form.html
@@ -135,7 +135,9 @@
         text-decoration: none;
         color: #2c7715;
       }
-
+      .error {
+        color: crimson;
+      }
       
 
     </style>
@@ -152,6 +154,9 @@
                 <!-- <p>Vui lòng kiểm tra email!</p>
                 <p>Email không tồn tại</p> -->
                 <input type="submit" value="GỬI" />
+                <div>
+                  <p class="error">không được để trống</p>
+                </div>
                 <a href="./login.html">Đăng nhập</a> <br>
                 <a href="./index.html">Trang chủ</a>
 
