--- a/category.html
+++ b/category.html
@@ -295,6 +295,25 @@
                     </div>
                     <!-- <div class="sold_out">Hết hàng</div>                         -->
                 </div>
+                <div class="product__card products__container-content">
+                    <div class="product__img">
+                        <a href="./product_page.html">
+                            <img src="./assets/img/dong-ho-casio-la670.png">
+                        </a>
+                    </div>
+                    <div class="product__category">Tên loại hàng</div>
+                    <div class="product__title" title="tên sản phẩm">
+                        <a href="./product_page.html">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta modi, natus corrupti eum aut
+                            consequatur. Culpa repellat, odio earum eligendi reiciendis voluptates doloribus qui, rerum
+                            libero similique amet, natus doloremque?
+                        </a>
+                    </div>
+                    <div class="product__price ">
+                        Giá tiền &#8363
+                    </div>
+                    <!-- <div class="sold_out">Hết hàng</div>                         -->
+                </div>
 
                 <div class="product__card products__container-content">
                     <div class="product__img">
